--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">ND1</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="editBynText">Edit</string>
+    <string name="doneBtnText">Done</string>
+    <string name="completed">Completed</string>
+    <string name="testStr">test</string>
+    <string name="testCompleted">Completed</string>
 </resources>
