--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,15 @@
 <resources>
     <string name="app_name">ND1</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="editBynText">Edit</string>
     <string name="doneBtnText">Done</string>
     <string name="completed">Completed</string>
-    <string name="testStr">test</string>
-    <string name="testCompleted">Completed</string>
+    <string name="done">Done</string>
+    <string name="timerDefaultText">00:00:00</string>
+    <string name="completionsDefaultText">0</string>
+    <string name="workout">Workout</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="pause">Pause</string>
+    <string name="cancel">Cancel</string>
 </resources>
