--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">ND1</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="editBynText">Edit</string>
     <string name="doneBtnText">Done</string>
     <string name="completed">Completed</string>
@@ -12,4 +11,9 @@
     <string name="stop">Stop</string>
     <string name="pause">Pause</string>
     <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="zero">0</string>
+    <string name="minutes">Minutes</string>
+    <string name="name">Name</string>
+    <string name="add">Add</string>
 </resources>
